[package]
name = "software_test_playbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
rusqlite = "0.30.0"

[dev-dependencies]
rstest = "0.18.2"
